<?xml version="1.0" encoding="utf-8"?><!--
/** Copyright 2012-2015 Kevin Hausmann
 *
 * This file is part of Podcatcher Deluxe.
 *
 * Podcatcher Deluxe is free software: you can redistribute it
 * and/or modify it under the terms of the GNU General Public License as 
 * published by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * Podcatcher Deluxe is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Podcatcher Deluxe. If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search_suggestions_menuitem"
        android:showAsAction="collapseActionView|always"
        android:title="@string/suggestions_search"
        android:icon="@drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/featured_suggestions_menuitem"
        android:showAsAction="ifRoom"
        android:title="@string/suggestion_featured"
        android:icon="@drawable/ic_menu_featured"/>
    <item
        android:id="@+id/new_suggestions_menuitem"
        android:showAsAction="ifRoom"
        android:title="@string/suggestion_new"
        android:icon="@drawable/ic_menu_new"/>
    <item
        android:id="@+id/podcast_add_menuitem"
        android:showAsAction="never"
        android:title="@string/podcast_add_by_url"
        android:icon="@drawable/ic_menu_add"/>
    <item
        android:id="@+id/import_opml_menuitem"
        android:showAsAction="never"
        android:title="@string/opml_import"
        android:icon="@drawable/ic_menu_import"/>
    <item
        android:id="@+id/send_suggestion_menuitem"
        android:showAsAction="never"
        android:title="@string/suggestions_send"
        android:icon="@drawable/ic_email"/>
</menu>