<?xml version="1.0" encoding="utf-8"?><!--
/** Copyright 2012-2015 Kevin Hausmann
 *
 * This file is part of Podcatcher Deluxe.
 *
 * Podcatcher Deluxe is free software: you can redistribute it
 * and/or modify it under the terms of the GNU General Public License as 
 * published by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * Podcatcher Deluxe is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Podcatcher Deluxe. If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/media_route_menu_item"
        android:orderInCategory="95"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/settings_menuitem"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:title="@string/preferences" />
    <item
        android:id="@+id/review_menuitem"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:title="@string/review" />
    <item
        android:id="@+id/follow_menuitem"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/follow" />
    <item
        android:id="@+id/help_menuitem"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/help" />
    <item
        android:id="@+id/about_menuitem"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about" />
</menu>