<?xml version="1.0" encoding="utf-8"?><!--
/** Copyright 2012-2015 Kevin Hausmann
 *
 * This file is part of Podcatcher Deluxe.
 *
 * Podcatcher Deluxe is free software: you can redistribute it
 * and/or modify it under the terms of the GNU General Public License as 
 * published by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * Podcatcher Deluxe is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Podcatcher Deluxe. If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/current_path"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"/>

        <ImageButton
                android:id="@+id/path_up"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@drawable/button_orange"
                android:src="@drawable/ic_file_up"/>
    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/divider"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <ListView
                android:id="@+id/files"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@drawable/list_selector"
                android:choiceMode="none"/>

        <TextView
                android:id="@android:id/empty"
                style="@style/ListView.Empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_select_folder_empty"/>
    </FrameLayout>

    <Button
            android:id="@+id/select_file"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:background="@drawable/button_green"
            android:text="@string/file_select"
            android:textColor="@drawable/button_label"/>
</LinearLayout>