<?xml version="1.0" encoding="utf-8"?><!--
/** Copyright 2012-2014 Kevin Hausmann
 *
 * This file is part of PodCatcher Deluxe.
 *
 * PodCatcher Deluxe is free software: you can redistribute it 
 * and/or modify it under the terms of the GNU General Public License as 
 * published by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * PodCatcher Deluxe is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with PodCatcher Deluxe. If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <EditText
        android:id="@+id/podcast_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/podcast_enter_url_here"
        android:imeOptions="actionGo"
        android:inputType="textUri|textNoSuggestions"/>

    <com.podcatcher.deluxe.view.HorizontalProgressView
        android:id="@+id/add_podcast_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/suggestion_add_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/suggestions"
            android:textColor="@drawable/button_label"/>

        <Button
            android:id="@+id/podcast_add_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/podcast_add_button"
            android:textColor="@drawable/button_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/import_opml_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/button_blue"
        android:drawableStart="@drawable/ic_menu_import"
        android:ellipsize="marquee"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="40dp"
        android:singleLine="true"
        android:text="@string/opml_import"
        android:textColor="@drawable/button_label"/>
</LinearLayout>